--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <button onclick="bt()">modife</button>
         <button id="s_btn">text</button>
         <button id="del">remove</button><br>
+    </div>
+    <div class="txt_ae">
         <textarea name="" id="txt" cols="30" rows="10"></textarea>
     </div>
-
 
 
     <script src="js/sheet.js"></script>
