--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="multi-button">
         <button onclick="bt()">modife</button>
         <button id="s_btn">text</button>
+        <button id="save">save</button>
         <button id="del">remove</button><br>
     </div>
     <div class="txt_ae">
